objects/LAT_ReferenceProductGrouping__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <inlineHelpText>Seleccione el Pais al que el Agrupamento corresponde. Brasil --&gt; 1, Uruguay --&gt; 5, Argentina --&gt; 6, Mexico --&gt; 12</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupType__c</fullName>
        <description>Determines the type of children this record will have</description>
        <label>Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Type</fullName>
                    <default>true</default>
                    <label>No Type</label>
                </value>
                <value>
                    <fullName>SKU</fullName>
                </value>
                <value>
                    <fullName>Keybrand</fullName>
                </value>
                <value>
                    <fullName>Schc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Agrupamento Pai é sempre do tipo Volume Contrato e consolida todos os Agrupamentos &quot;filhos&quot;</inlineHelpText>
        <label>Agrupamento Pai</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LAT_ReferenceProductGrouping__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Volume Contrato</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LAT_ReferenceProductGrouping__c</referenceTo>
        <relationshipLabel>Agrupamentos Produtos</relationshipLabel>
        <relationshipName>ReferenceProductGroupChilds</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Agrupamento Produtos</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Parent__c</columns>
        <columns>NAME</columns>
        <columns>ExternalId__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Coleta_NF_ON</fullName>
        <columns>ExternalId__c</columns>
        <columns>NAME</columns>
        <columns>Parent__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_ReferenceProductGrouping__c.LAT_Sellin</value>
        </filters>
        <label>Coleta NF (ON)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Coleta_SellOut_OFF</fullName>
        <columns>ExternalId__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_ReferenceProductGrouping__c.LAT_SellOut</value>
        </filters>
        <label>Coleta SellOut (OFF)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Coleta_Volume_ON</fullName>
        <columns>ExternalId__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Order__c</columns>
        <columns>Parent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_ReferenceProductGrouping__c.LAT_Volumen</value>
        </filters>
        <label>Coleta Volume (ON)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pagamento_Produto</fullName>
        <columns>ExternalId__c</columns>
        <columns>Parent__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Order__c</columns>
        <columns>GroupType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_ReferenceProductGrouping__c.LAT_ProductPayment</value>
        </filters>
        <label>Pagamento Produto</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Volume_Contrato</fullName>
        <columns>ExternalId__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Order__c</columns>
        <columns>Parent__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_ReferenceProductGrouping__c.LAT_ContractVolume</value>
        </filters>
        <label>Volume Contrato</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Grouping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agrupamentos Produtos</pluralLabel>
    <recordTypes>
        <fullName>LAT_ContractVolume</fullName>
        <active>true</active>
        <label>Volume Contrato</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_ProductPayment</fullName>
        <active>true</active>
        <label>Pagamento Produto</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_SellOut</fullName>
        <active>true</active>
        <label>Coleta SellOut (OFF)</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_Sellin</fullName>
        <active>true</active>
        <label>Coleta NF (ON)</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_Volumen</fullName>
        <active>true</active>
        <label>Coleta Volume (ON)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>